# MultiAgentResearchAssistant

./: .gitignore  README.md
backend/: .env.example  coverage_report.txt  cr_review.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  utils.py
backend/app/agents/: __init__.py  base.py  middleware.py  orchestrator.py  report_agent.py  research_agent.py  reviewer_agent.py  scope_agent.py  sub_agent.py  supervisor_agent.py
backend/app/api/: __init__.py  chat.py  conversations.py  exports.py  routes.py  streaming.py
backend/app/chains/: research_chain.py
backend/app/graphs/: __init__.py  research_graph.py  state.py
backend/app/models/: __init__.py  schemas.py
backend/app/persistence/: __init__.py  checkpointer.py  store.py
backend/app/prompts/: __init__.py  report_prompts.py  research_prompts.py  scope_prompts.py
backend/app/tools/: __init__.py  academic_tools.py  arxiv_tool.py  base_tool.py  mcp_client.py  mcp_tools.py  tavily_search.py  tavily_tools.py  tool_registry.py
backend/app/utils/: __init__.py  credibility_scorer.py  error_handling.py  export_bibtex.py  export_pdf.py  findings_compressor.py  gap_analyzer.py  markdown_formatter.py  paper_extractor.py  post_report_handler.py  report_formatters.py  research_sources.py  research_strategy.py
backend/eval_results/: multi_agent_researcher.jsonl
backend/evals/: README.md  __init__.py  __main__.py  cli.py  drb_evaluator.py  langsmith_eval.py  models.py  policies.py  reporters.py  runner.py  scorers.py
backend/evals/adapters/: __init__.py  base.py  (+2 more)
backend/tests/: conftest.py
(+142 files in other folders)
