[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the Multi-Agent Research Assistant"
readme = "../README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "black==23.11.0",
    "deepeval>=3.7.2",
    "fastapi==0.121.3",
    "httpx==0.28.1",
    "langchain==1.0.8",
    "langchain-community==0.4.1",
    "langchain-core==1.0.7",
    "langchain-deepseek==1.0.1",
    "langchain-google-genai==2.1.12",
    "langchain-tavily>=0.2.13",
    "langgraph==1.0.3",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "mypy==1.7.1",
    "openai==1.109.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "python-multipart==0.0.6",
    "ruff==0.9.10",
    "uvicorn[standard]==0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
